# auto-trading-bot

./: .gitignore  README.md  pyproject.toml
.omx/: metrics.json
docs/: api-operational-risk-gate.md  broad-market-data-feature-gate.md  broker-api-comparison.md  cloud-paper-observation.md  free-data-source-expansion.md  future-live-trading-gate.md  live-pilot-activation-schedule.md  market-comparison.md  market-wide-paper-trading-plan.md  no-order-blockers-and-improvements.md  strategy-research-loop.md  training-data-and-modeling-roadmap.md
reports/: intraday-no-order-log.jsonl  paper-challenger-observation-log.jsonl  paper-dry-run-signal-latest.json  paper-observation-log.jsonl  paper-quant-observation-log.jsonl  paper-quant-signal-latest.json  paper-trade-intent-log.jsonl
scripts/: adaptive_allocation_search.py  bls_macro_snapshot.py  broker_api_comparison.py  broker_execution_preflight_report.py  build_us_liquid_universe.py  discord_paper_report.py  fundamental_macro_recent_gate.py  gdelt_news_attention_snapshot.py  github_issue_report.py  independent_price_replication_gate.py  intraday_no_order_monitor.py  live_readiness_gate.py  market_data_feature_gate.py  market_universe_candidate_scan.py  modeling_data_source_registry.py  no_order_gate_status.py  no_order_preview_report.py  non_leveraged_universe_analysis.py  operational_risk_gate.py  paper_challenger_signal.py  paper_observation_log.py  paper_signal_dry_run.py  paper_trade_intent_log.py  point_in_time_dataset.py  quant_paper_signal.py  scorecard_baseline_report.py  sec_fundamental_feature_snapshot.py  (+3 more)
(+127 files in other folders)
