[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-trading-bot"
version = "0.1.0"
description = "Offline validation-first stock trading research MVP with no live-order pathways."
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Auto Trading Bot Contributors" }]
dependencies = []

[project.scripts]
auto-trading-bot = "auto_trading_bot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["auto_trading_bot"]
